ex00 and ex01 first done
ex00 and ex01 is done at first time
ex00 : I edit the ex00 because I misunderstood the subject want thank you miggylee(is this right id?)
ex01 : maybe done but not test yet I learned a lot about cpp and class I will post on my blog what I study until 4 day

--- a/CPP_Module_00/ex01/Makefile
+++ b/CPP_Module_00/ex01/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -std=c++98 -Wall -Wextra -Werror
 
 NAME = contact
 
-SRCS = Contact.cpp main.cpp
+SRCS = Contact.cpp main.cpp PhoneBook.cpp print.cpp
 
 RM = rm -rf
 
