--- a/CPP_Module_00/ex00/Makefile
+++ b/CPP_Module_00/ex00/Makefile
@@ -19,7 +19,7 @@ $(NAME) : $(OBJS)
 	$(CC) $(CFLAGS) -o $@ -c $^
 
 clean:
-	$(RM) $(OBJS) $(OBJS_BONUS)
+	$(RM) $(OBJS)
 
 fclean: clean
 	$(RM) $(NAME)
