--- a/CPP_Module_05/ex03/Makefile
+++ b/CPP_Module_05/ex03/Makefile
@@ -9,6 +9,7 @@ SRCS = Bureaucrat.cpp						\
 		PresidentialPardonForm.cpp	\
 		RobotomyRequestForm.cpp			\
 		ShrubberyCreationForm.cpp		\
+		Interns.cpp									\
 
 RM = rm -rf
 
