ex00 designing prototype
I found double to string and string to double make trouble so I have to
use other type solution

--- a/CPP_Module_06/ex00/Makefile
+++ b/CPP_Module_06/ex00/Makefile
@@ -3,7 +3,8 @@ CFLAGS = -std=c++98 -Wall -Wextra -Werror
 
 NAME = convert
 
-SRCS = main.cpp		\
+SRCS = main.cpp							\
+			 ScalarConverter.cpp	\
 
 RM = rm -rf
 
